frontend/.k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todomanagement-frontend
  namespace: ${NAMESPACE}
  labels:
    app: todomanagement-frontend

spec:
  replicas: 1

  strategy:
    type: Recreate   # Replica 1 için en mantıklısı

  selector:
    matchLabels:
      app: todomanagement-frontend

  template:
    metadata:
      labels:
        app: todomanagement-frontend

    spec:
      imagePullSecrets:
        - name: retail-gitlab

      containers:
        - name: frontend
          image: ${FRONTEND_IMAGE}
          imagePullPolicy: Always

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
