frontend/.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${FRONTEND_NAME}
  namespace: ${NAMESPACE}
spec:
  type: NodePort
  selector:
    app: ${FRONTEND_NAME}
  ports:
    - name: http        # Portun isimlendirilmesi (best-practice)
      protocol: TCP     # Kullanılan protokol
      port: 80
      targetPort: 80
      nodePort: 32390
